--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.3
+  equatable: 2.0.5
+  get_it: 7.6.0
 
 dev_dependencies:
   flutter_test:
