--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter_bloc: 8.1.3
   equatable: 2.0.5
   get_it: 7.6.0
+  http: 0.13.6
+  flutter_dotenv: 5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +22,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
+    - .env.test
